# oop_pract_7

./: README.md  pyproject.toml
examples/: daemon_thread.py  inheritance_thread.py  stop_thread.py  thread_use.py
tasks/: sum_series.py  task_1.py
tests/: test_sum_siries.py
